@@ -8,6 +8,7 @@
  * When sending email, set charset to utf8 and transfer encoding to 8bit,
    so that international characters are preserved correctly. (#1162)
  * aggregates_in_slice only finds one aggregate (#1174)
+ * Verify the signer of a speaks-for credential before storing it. (#1175)
 
 == 2.20 ==
  * Require unique name for rspecs (#784)
